--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,17 @@
-# This is a basic workflow to help you get started with Actions
-
 name: ASID
-
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
 
 jobs:
-  tagged-release:
-    name: "Tagged Release"
+  build-composer:
     runs-on: "ubuntu-latest"
     steps:
-      - uses: "marvinpinto/action-automatic-releases@latest"
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: false
-          automatic_release_tag: "1.0.1"
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Composer build
+        run: |
+          composer install --no-dev --prefer-dist --no-progress
+          composer dump-autoload -o
