--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      - run: mkdir -p ./artifact
       - name: Composer build
         run: |
           composer install --no-dev --prefer-dist --no-progress
@@ -19,4 +20,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: my-artifact
-          path: path/**/[abc]rtifac?/*
+          path: ./artifact
