--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,9 +9,11 @@ jobs:
   build-composer:
     runs-on: "ubuntu-latest"
     steps:
-      - run: cd art-show-id && ls -la
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          path: wooms-extra
+      - run: cd art-show-id && ls -la
       - run: mkdir -p ./artifact
       - name: Composer build
         run: |
