--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,6 @@ jobs:
         with:
           path: art-show-id
       - run: cd art-show-id && ls -la
-      - run: mkdir -p ./artifact
       - name: Composer build
         run: |
           composer install --no-dev --prefer-dist --no-progress
@@ -22,5 +21,5 @@ jobs:
       - name: Artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: my-artifact
-          path: ./artifact
+          name: art-show-id
+          path: art-show-id.zip
