--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          path: art-show-id
+        - run: cd art-show-id && ls -la
+        - name: action-zip
+          uses: montudor/action-zip@v0.1.0
+          with:
+            args: zip -qq -r art-show-id.zip art-show-id
+        - run: ls -la
+        - run: cd art-show-id & ls -la
       - name: Composer build
         run: |
           composer install --no-dev --prefer-dist --no-progress
