--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,10 +16,10 @@ jobs:
           composer install --no-dev --prefer-dist --no-progress
           composer dump-autoload -o
       - name: Create deployment artifact
-        run: zip art-show-id.zip --exclude=*.git --exclude=node_modules *
+        run: zip ${GITHUB_REPOSITORY}.zip --exclude=*.git --exclude=node_modules *
 
       - name: Store artifact for distribution
         uses: actions/upload-artifact@v2
         with:
-          name: art-show-id
-          path: art-show-id.zip
+          name: ${GITHUB_REPOSITORY}
+          path: ${GITHUB_REPOSITORY}.zip
