--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: ASID
+name: art-show-id
 on:
   push:
     branches: [ master ]
@@ -23,9 +23,9 @@ jobs:
       - name: Create deployment artifact
         env:
           REPO_NAME: ${{ github.event.repository.name }}
-        run: zip "${REPO_NAME}".zip --exclude=*.git --exclude=node_modules *
+        run: zip "${GITHUB_WORKFLOW}".zip --exclude=*.git --exclude=node_modules *
       - name: Store artifact for distribution
         uses: actions/upload-artifact@v2
         with:
-          name: ${REPO_NAME}
-          path: ${REPO_NAME}.zip
+          name: ${GITHUB_WORKFLOW}
+          path: ${GITHUB_WORKFLOW}.zip
