--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Create deployment artifact
         env:
           REPO_NAME: ${{ github.event.repository.name }}
-        run: zip "${GITHUB_WORKFLOW}".zip --exclude=*.git --exclude=node_modules *
+        run: zip "${{ github.workflow }}".zip --exclude=*.git --exclude=node_modules *
       - name: Store artifact for distribution
         uses: actions/upload-artifact@v2
         with:
-          name: ${GITHUB_WORKFLOW}
-          path: ${GITHUB_WORKFLOW}.zip
+          name: ${{ github.workflow }}
+          path: ${{ github.workflow }}.zip
