--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,8 @@ jobs:
         run: |
           composer install --no-dev --prefer-dist --no-progress
           composer dump-autoload -o
+      - name: Create deployment artifact
+        run: zip "${{ github.workflow }}".zip --exclude=*.git --exclude=node_modules *
       - name: Store artifact for distribution
         uses: actions/upload-artifact@v2
         with:
