--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,8 @@ on:
     branches: [ master ]
 
 jobs:
-  build-composer:
+  build:
+    name: Build project
     runs-on: "ubuntu-latest"
     steps:
       - name: Dump github context
@@ -27,3 +28,18 @@ jobs:
         with:
           name: ${{ github.workflow }}
           path: ${{ github.workflow }}.zip
+  release:
+    name: Release project
+    runs-on: "ubuntu-latest"
+    needs: build
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ github.workflow }}
+      - name: Archive Release
+        uses: thedoctor0/zip-release@master
+        with:
+          type: 'zip'
+          filename: ${{ github.workflow }}.zip
+          exclusions: '*.git* /*node_modules/* .editorconfig'
