--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,7 @@ jobs:
         uses: mindsers/changelog-reader-action@v2
         with:
           validation_depth: 10
+          path: CHANGELOG.md
       - name: Create Release
         id: create-release
         uses: actions/create-release@v1
@@ -49,7 +50,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ steps.changelog-reader.outputs.version }}
-          release_name: Release ${{ steps.changelog-reader.outputs.version }}
+          release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
       - name: Upload release assets
