--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,8 @@ jobs:
     runs-on: "ubuntu-latest"
     needs: build
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
@@ -45,14 +47,14 @@ jobs:
           path: CHANGELOG.md
       - name: Create Release
         id: create-release
-        uses: actions/create-release@v1
+        uses: ncipollo/release-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.changelog-reader.outputs.version }}
+          tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
+          allowUpdates: true
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload release assets
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
