--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.changelog_reader.outputs.version }}
+          tag_name: ${{ steps.changelog-reader.outputs.version }}
           release_name: Release ${{ steps.changelog-reader.outputs.version }}
           draft: false
           prerelease: false
