--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,7 @@ jobs:
         uses: mindsers/changelog-reader-action@v2
         with:
           path: CHANGELOG.md
+      - run: echo ${{ steps.changelog-reader}}
       - name: Create Release
         id: create-release
         uses: actions/create-release@v1
