--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,17 +44,13 @@ jobs:
         uses: mindsers/changelog-reader-action@v2
         with:
           path: CHANGELOG.md
-      - run: echo ${{ steps.changelog-reader}}
       - name: Create Release
         id: create-release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          tag_name: ${{ steps.changelog-reader.outputs.version }}
-          release_name: Release ${{ steps.changelog-reader.outputs.version }}
-          draft: false
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
+          automatic_release_tag: "${{ steps.changelog-reader.outputs.version }}"
       - name: Upload release assets
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
