--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,6 +58,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create-release.outputs.upload_url }}
-          asset_path: ${{ github.workflow }}
+          asset_path: ${{ github.workflow }}.zip
           asset_name: ${{ github.workflow }}.zip
           asset_content_type: application/zip
