--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,11 @@ jobs:
           composer install --no-dev --prefer-dist --no-progress
           composer dump-autoload -o
       - name: Create deployment artifact
-        run: zip "${{ github.workflow }}".zip --exclude=*.git --exclude=node_modules *
+        uses: thedoctor0/zip-release@master
+        with:
+          type: 'zip'
+          filename: ${{ github.workflow }}.zip
+          exclusions: '*.git* /*node_modules/* .editorconfig'
       - name: Store artifact for distribution
         uses: actions/upload-artifact@v2
         with:
@@ -33,8 +37,6 @@ jobs:
     runs-on: "ubuntu-latest"
     needs: build
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
@@ -46,11 +48,11 @@ jobs:
           path: CHANGELOG.md
       - name: Create Release
         id: create-release
-        uses: "marvinpinto/action-automatic-releases@latest"
+        uses: marvinpinto/action-automatic-releases@latest
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
           prerelease: false
-          automatic_release_tag: "${{ steps.changelog-reader.outputs.version }}"
+          automatic_release_tag: ${{ steps.changelog-reader.outputs.version }}
       - name: Upload release assets
         id: upload-release-asset
         uses: actions/upload-release-asset@v1
