--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
             ${{ runner.os }}-composer-
       - name: Install dependencies in prod version
         run: |
-          composer config github-oauth.github.com ${{ secrets.GITHUB_TOKEN }}
+          composer dump-autoload -o
           make install-prod
         env:
           COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
