--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,25 +10,17 @@ jobs:
     name: Build project
     runs-on: "ubuntu-latest"
     steps:
-      - name: Get Composer cache directory
-        id: composer-cache
-        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
-
-      - name: Set up Composer caching
-        uses: actions/cache@v2
+      - name: Dump github context
+        run: echo "$GITHUB_CONTEXT"
+        shell: bash
         env:
-          cache-name: cache-composer-dependencies
-        with:
-          path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-composer-
-      - name: Install dependencies in prod version
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Composer build
         run: |
+          composer install --no-dev --prefer-dist --no-progress
           composer dump-autoload -o
-          make install-prod
-        env:
-          COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Create deployment artifact
         uses: thedoctor0/zip-release@master
         with:
@@ -47,6 +39,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      - name: Install dependencies in prod version
+        run: make install-prod
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
