GHA 1.1.0: перенастройка создания релиза

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,4 +1,4 @@
-name: art-show-id
+name: Create release
 on:
   push:
     branches: [ master ]
@@ -10,11 +10,6 @@ jobs:
     name: Build project
     runs-on: "ubuntu-latest"
     steps:
-      - name: Dump github context
-        run: echo "$GITHUB_CONTEXT"
-        shell: bash
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Composer build
@@ -25,17 +20,17 @@ jobs:
         uses: thedoctor0/zip-release@master
         with:
           type: 'zip'
-          filename: ${{ github.workflow }}.zip
+          filename: ${{ github.event.repository.name }}.zip
           exclusions: '*.git* /*node_modules/* .editorconfig'
       - name: Store artifact for distribution
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ github.workflow }}
-          path: ${{ github.workflow }}.zip
+          name: ${{ github.event.repository.name }}
+          path: ${{ github.event.repository.name }}.zip
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
-          name: ${{ github.workflow }}
+          name: ${{ github.event.repository.name }}
       - name: Get Changelog Entry
         id: changelog-reader
         uses: mindsers/changelog-reader-action@v2
@@ -55,6 +50,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create-release.outputs.upload_url }}
-          asset_path: ${{ github.workflow }}.zip
-          asset_name: ${{ github.workflow }}.zip
+          asset_path: ${{ github.event.repository.name }}.zip
+          asset_name: ${{ github.event.repository.name }}.zip
           asset_content_type: application/zip
